# MonkMode

./: CMakeLists.txt  MONK_NOTES  TODO  main.cpp  monk_img_1.txt  monks.h
